output GC log